--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "core-js": "^3.8.3",
     "sass": "^1.63.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.13",
-    "vuetify": "^3.3.7"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
