--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "http-server": "^14.1.1",
     "sass": "^1.63.6",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
