--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.13",
+    "vue3-datepicker": "^0.4.0",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
